using System;

namespace EstudioContable.Entidades
{
    public class Empresa
    {
        private int _id;
        private string _razonSocial;
        private int _cuit;
        private string _domicilio;
        private DateTime _fechaAlta;
        private int _usuario;
    }
}