using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace EstudioContable.Entidades
{
    public abstract class Persona
    {

        String nombre;
        String apellido;
        DateTime fechaNacimiento;

    }
}
